Updated placeholder resume, testing - all links throughout site, improved text alignment on Portfolio pg, fix alignment of github links in project containers on Portfolio pg. Worked on Website Strucutre section of README.

--- a/style.scss
+++ b/style.scss
@@ -307,6 +307,11 @@ aside a {
     background: $secondary-color;
 }
 
+// Left align paragraphs within project containers
+.project p {
+    text-align: left;
+}
+
 // Style images within Project sections
 .project-image {
     display: block;
@@ -389,7 +394,7 @@ aside a {
 }
 
 // Define grid area of blog titles
-.blog-title {
+.blog-title, .blog-list-title {
     grid-area: title;
 }
 
@@ -651,7 +656,7 @@ footer {
 
     // Adjustments for Blog page
     // Increase size of blog titles & dates published
-    .blog-title {
+    .blog-title, .blog-list-title {
         font-size: 1.5rem;
     }
 
@@ -661,7 +666,7 @@ footer {
 }
 
 // media query for desktop screens
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1100px) {
     // Adjustments required for Home page
     // Adjust grid row proportions on wrapper on Home page
     #wrapper {
